--- a/secrets.toml.template
+++ b/secrets.toml.template
@@ -16,8 +16,8 @@
 # - Supabase (https://supabase.com/) - Free tier with PostgreSQL
 # - Railway (https://railway.app/) - Free tier with PostgreSQL
 
-host = "your-cloud-db-host.com"
+host = "izeucyklesaozfxqqwur.supabase.co"
 port = 5432
-database = "your_database_name"
-user = "your_username"
-password = "your_password"
+database = "churn_db"
+user = "postgres"
+password = "AIDataPipeline#2025"
