--- a/secrets.toml.template
+++ b/secrets.toml.template
@@ -16,8 +16,8 @@
 # - Supabase (https://supabase.com/) - Free tier with PostgreSQL
 # - Railway (https://railway.app/) - Free tier with PostgreSQL
 
-host = "izeucyklesaozfxqqwur.supabase.co"
+host = "db.izeucyklesaozfxqqwur.supabase.co"
 port = 5432
-database = "churn_db"
+database = "postgres"
 user = "postgres"
 password = "AIDataPipeline#2025"
